# preprints-pdfs

./: Archaeological data provide alternative hypotheses on Pacific herring (Clupea pallasii) distribution, abundance, and variability  Dockerfile  Measuring Mytilus californianus: an Addendum to Campbell and Braje (2015) and Singh and McKechnie (2015) including commentary and an integration of data  README.md  config.toml  docker-compose.yaml  fixUrl.py  generated.txt  list-items.py  package-lock.json  package.json  pdfs.py  pyproject.toml  update-bibtex.py  zotero.bib  zoteroAPI.py
.github/workflows/: download-zotero-pdfs.yml  workflow_01.yml
pdfs/: pdfs.py
