[tool.poetry]
name = "preprints-pdfs-pyzotero"
version = "0.1.0"
description = "Grab Bibtex file metadata from Zotero API"
authors = ["Steve Vandervalk <steve.vandervalk@hakai.org>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyzotero = "^1.5.18"
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
